@@ -13,6 +13,7 @@ version 0.8.2 - XX-MMM-2009
  . CocosNode: added boundingBox method (issue #528)
  . Director: added convertToUI and renamed convertCoordinate to convertToGL (issue #531)
  . Director: fixed 2 leaks on Director#end (issue #524)
+ . Director: FastDirector called from a thread (issue #560)
  . Documentation: doxygen builds OK when there are spaces in the path (issue #540)
  . Label / Texture2D: Supports any .ttf via FontLabel (issue #534)
  . LabelAtlas: works with 256 different chars (issue #516)
